# cc-adapter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  publish.yml
cc_adapter/: config.py  context_limits.py  converters.py  gui.py  logging_utils.py  model_registry.py  models.py  server.py  streaming.py
cc_adapter/providers/: lmstudio.py  openrouter.py  poe.py
tests/: test_context_defaults.py  test_converters.py  test_provider_connectivity.py  test_server_helpers.py
